--- a/docs/style.css
+++ b/docs/style.css
@@ -94,14 +94,14 @@ textarea:not([rows]) {
   --div-color: #e2e8f0;
   --border-radius: 1rem;
   --padding: 1rem;
-  --color: #2D3748;
+  --color: #CBD5E1;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --bg-color: #020617;
     --div-color: #0F172A;
-    --color: #E2E8F0;
+    --color: #334155;
   }
 }
 
@@ -109,7 +109,25 @@ body {
   margin: 0px;
   color: var(--color);
   background-color: var(--bg-color);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: "Flow Block", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.3rem;
+  line-height: normal;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Flow Block", serif;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 0.8;
+  margin-top: 0px;
+}
+h1{
+  font-size: 3rem;
+}
+
+p:first-child {
+  margin-top: 0px;
 }
 
 .wrapper{
